# bitcoin-rust

./: Cargo.toml  README.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  api.ts  types.ts
frontend/src/components/: BitcoinIcon.tsx  Card.tsx  LoadingSpinner.tsx  Navbar.tsx
frontend/src/pages/: Blocks.tsx  Mining.tsx  Pool.tsx  Transact.tsx  Wallet.tsx
src/: chain_util.rs  config.rs  lib.rs  main.rs
src/app/: miner.rs  mod.rs  p2p_server.rs  routes.rs
src/blockchain/: block.rs  block_test.rs  blockchain.rs  blockchain_test.rs  mod.rs
src/wallet/: mod.rs  transaction.rs  transaction_pool.rs  transaction_pool_test.rs  transaction_test.rs  wallet.rs  wallet_test.rs
