[package]
name = "bitcoin_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10"
chrono = "0.4"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
lazy_static = "1"
tokio-tungstenite = "0.21"
tungstenite = "0.21"
futures = "0.3"
url = "2"
dotenv = "0.15.0"
futures-util = "0.3"
k256 = "0.11"        
rand_core = "0.6" 
hex = "0.4"
